k8s/eventbus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: eventbus
          image: gcr.io/forward-dream-436005-g7/eventbusserv@sha256:13d7773038f19890f854a817b12d2fe1fe23bbd8af758ff34406669f343f67a0
          imagePullPolicy: Always
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: eventbus
  ports:
  - name: eventbus
    protocol: TCP
    port: 4010
    targetPort: 4010
