k8s/gallerymgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallerymgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gallerymgmt
  template:
    metadata:
      labels:
        app: gallerymgmt
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: gallerymgmt
          image:  gcr.io/forward-dream-436005-g7/gallerymgmtserv:61b81a5-dirty@sha256:7d4746c1b60b9250c2eeed9ea91376a3b2579e6c7d772938389f56b0700d17ad
          imagePullPolicy: Always
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: gallerymgmt-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: gallerymgmt
  ports:
  - name: gallerymgmt
    protocol: TCP
    port: 4002
    targetPort: 4002
