k8s/logging-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging
  template:
    metadata:
      labels:
        app: logging
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: logging
          image: gcr.io/forward-dream-436005-g7/loggingserv:61b81a5-dirty@sha256:2f5207ddad0b3fe0ec482aafebbe6e4759ca50389b35b43615a4e352bc90b880
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: logging-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: logging
  ports:
  - name: logging
    protocol: TCP
    port: 4003
    targetPort: 4003
