k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: query
          image: gcr.io/forward-dream-436005-g7/queryserv:61b81a5-dirty@sha256:56e34976f9e2572d1bcd08e5643852c559453a14a679bb94081176123eea3dab
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4005
    targetPort: 4005
