k8s/storagemgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storagemgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storagemgmt
  template:
    metadata:
      labels:
        app: storagemgmt
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: storagemgmt
          image: gcr.io/forward-dream-436005-g7/storagemgmtserv:61b81a5-dirty@sha256:96d95cd62060b139bc515bf8abcb1e7e904cf65aff9336aba09136e2b4eb7490
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: storagemgmt-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: storagemgmt
  ports:
  - name: storagemgmt
    protocol: TCP
    port: 4001
    targetPort: 4001
