k8s/usagemntr-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usagemntr-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usagemntr
  template:
    metadata:
      labels:
        app: usagemntr
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: usagemntr
          image: gcr.io/forward-dream-436005-g7/usagemntrserv:61b81a5-dirty@sha256:fbd1bbd6dea6c8c3c74f34deb12ad8f5503801c0df4eec7cebbd64cc0d85e88d
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: usagemntr-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: usagemntr
  ports:
  - name: usagemntr
    protocol: TCP
    port: 4004
    targetPort: 4004
