k8s/useraccmgmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useraccmgmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: useraccmgmt
  template:
    metadata:
      labels:
        app: useraccmgmt
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: useraccmgmt
          image: gcr.io/forward-dream-436005-g7/useraccmgmtserv:61b81a5-dirty@sha256:bbb41a315f26b68b771d8a6b62ec73ab65774bb84bfac287ea3e13818ff59000
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: useraccmgmt-cluster-serv
spec:
  type: ClusterIP
  selector:
    app: useraccmgmt
  ports:
  - name: useraccmgmt
    protocol: TCP
    port: 4000
    targetPort: 4000
