k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.cloudreel.live

      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: useraccmgmt-cluster-serv
                port:
                  number: 4000
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: gallerymgmt-cluster-serv
                port:
                  number: 4002
          - path: /queries
            pathType: Prefix
            backend:
              service:
                name: query-cluster-serv
                port:
                  number: 4005
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: logging-cluster-serv
                port:
                  number: 4003
          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: storagemgmt-cluster-serv
                port:
                  number: 4001
          - path: /usagemonitoring
            pathType: Prefix
            backend:
              service:
                name: usagemntr-cluster-serv
                port:
                  number: 4004
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: eventbus-cluster-serv
                port:
                  number: 4010
